[package]
name = "ch01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ch01_0"
path = "src/0/main.rs"

[[bin]]
name = "ch01_1"
path = "src/1/main.rs"

[[bin]]
name = "ch01_2"
path = "src/2/main.rs"


[dependencies]


